src/snapshots/llms_fetch_mcp__tests__format_output_snapshots__snapshot_llms_full.snap
---
source: src/main.rs
expression: format_output(&files)
---
## https://docs.astro.build/llms-full.txt
Saved to: .llms-fetch-mcp/docs.astro.build/llms-full.txt
Type: llms-full (73088 lines, 302839 words, 2495893 chars)
