src/snapshots/llms_fetch_mcp__tests__format_output_snapshots__snapshot_small_file_no_toc.snap
---
source: src/main.rs
expression: format_output(&files)
---
## https://www.solidjs.com/guides/getting-started
Saved to: .llms-fetch-mcp/www.solidjs.com/guides/getting-started/index
Type: html-converted (60 lines, 240 words, 1798 chars)

### Content
---

To experiment with Solid directly in your browser, head over to our [interactive playground](https://playground.solidjs.com/).
Prefer a full development setup? You can set up a complete environment using StackBlitz.
Start with the [TypeScript](https://stackblitz.com/github/solidjs/templates/tree/master/ts) or [JavaScript](https://stackblitz.com/github/solidjs/templates/tree/master/js) templates.

---

To create a new Solid application, navigate to the directory where you want to create your project and run the following command:

```
npm init solid
```

```
pnpm create solid
```

```
yarn create solid
```

```
bun create solid
```

```
deno init --npm solid
```

This command installs and runs [create-solid](https://github.com/solidjs-community/solid-cli/tree/main/packages/create-solid), the official project scaffolding tool for Solid.
The CLI will guide you through a series of prompts, allowing you to choose options such as [starter templates](https://github.com/solidjs/templates), TypeScript support, and whether to include [Solid's full-stack framework, SolidStart](https://docs.solidjs.com/solid-start):

```
◆ Project Name|  <solid-project>◆ Is this a SolidStart project?|  ● Yes / ○ No◆ Which template would you like to use?│  ● ts│  ○ ts-vitest│  ○ ts-uvu│  ○ ts-unocss│  ○ ts-tailwindcss◆ Use TypeScript?│  ● Yes / ○ No
```

Once the project is created, follow the instructions to install the dependencies and start the development server:

```
│  cd solid-project│  npm install│  npm run dev
```

```
│  cd solid-project│  pnpm install│  pnpm dev
```

```
│  cd solid-project│  yarn install│  yarn dev
```

```
│  cd solid-project│  bun install│  bun run dev
```

```
│  cd solid-project│  deno install│  deno run dev
```

You should now have your Solid project running!
